--- a/conversa/web/index.html
+++ b/conversa/web/index.html
@@ -12,27 +12,42 @@
         const stream = await navigator.mediaDevices.getUserMedia({
           audio: true,
         });
-        const recorder = new MediaRecorder(stream, { mimeType: "audio/webm" });
 
-        recorder.ondataavailable = async (event) => {
-          const arrayBuf = await event.data.arrayBuffer();
-          socket.emit("audio_in", arrayBuf);
+        const audioCtx = new AudioContext({ sampleRate: 16000 });
+        const source = audioCtx.createMediaStreamSource(stream);
+
+        // Create ScriptProcessorNode to get raw PCM data
+        const processor = audioCtx.createScriptProcessor(4096, 1, 1);
+
+        processor.onaudioprocess = (e) => {
+          const inputData = e.inputBuffer.getChannelData(0); // Float32Array [-1, 1]
+
+          // Convert float32 [-1, 1] to int16 PCM
+          const pcm16 = new Int16Array(inputData.length);
+          for (let i = 0; i < inputData.length; i++) {
+            const s = Math.max(-1, Math.min(1, inputData[i]));
+            pcm16[i] = s < 0 ? s * 0x8000 : s * 0x7fff;
+          }
+
+          // Send raw PCM bytes to server
+          socket.emit("audio_in", pcm16.buffer);
         };
 
-        recorder.start(100); // send every 100ms
+        source.connect(processor);
+        processor.connect(audioCtx.destination);
       }
       startAudio();
 
       // ====== PLAY AUDIO FROM SERVER ======
-      const audioCtx = new AudioContext();
+      const playbackCtx = new AudioContext();
 
       socket.on("audio_out", async (arrayBuffer) => {
-        const audioBuffer = await audioCtx.decodeAudioData(
+        const audioBuffer = await playbackCtx.decodeAudioData(
           arrayBuffer.slice(0)
         );
-        const source = audioCtx.createBufferSource();
+        const source = playbackCtx.createBufferSource();
         source.buffer = audioBuffer;
-        source.connect(audioCtx.destination);
+        source.connect(playbackCtx.destination);
         source.start();
       });
     </script>
